# papis-tui

./: README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
papistui/: __init__.py  main.py  tui.py
papistui/components/: commandinfo.py  commandprompt.py  documentlist.py  helpwindow.py  infowindow.py  keyinfo.py  messagebar.py  selector.py  statusbar.py
papistui/features/: bibtexprint.py  sorting.py  tagging.py  vim.py
papistui/helpers/: config.py  customargparse.py  document.py  keymappings.py  styleparser.py
